--- a/Chatty/Views/Base.lproj/Main.storyboard
+++ b/Chatty/Views/Base.lproj/Main.storyboard
@@ -122,6 +122,9 @@
                                         <state key="normal" title="Register">
                                             <color key="titleColor" name="BrandBlue"/>
                                         </state>
+                                        <connections>
+                                            <action selector="onRegisterClick:" destination="BYZ-38-t0r" eventType="touchUpInside" id="yEi-CT-J1o"/>
+                                        </connections>
                                     </button>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="textfield" translatesAutoresizingMaskIntoConstraints="NO" id="jY9-l3-E1g">
                                         <rect key="frame" x="0.0" y="20" width="414" height="137"/>
@@ -163,6 +166,8 @@
                     </view>
                     <navigationItem key="navigationItem" id="vsa-5O-2CZ"/>
                     <connections>
+                        <outlet property="emailTextField" destination="u72-XV-6FN" id="HYV-Oc-fOV"/>
+                        <outlet property="passwordTextField" destination="hLb-P9-NkF" id="RYa-w6-9b7"/>
                         <segue destination="lwd-AH-u8E" kind="show" identifier="registerToChat" id="BlI-qG-UUN"/>
                     </connections>
                 </viewController>
@@ -260,10 +265,10 @@
             </objects>
             <point key="canvasLocation" x="1857.9710144927537" y="698.4375"/>
         </scene>
-        <!--Chat View Controller-->
+        <!--View Controller-->
         <scene sceneID="yeH-Ia-3JZ">
             <objects>
-                <viewController id="lwd-AH-u8E" customClass="ChatViewController" customModule="Chatty" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="lwd-AH-u8E" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="CEy-W8-acN">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -355,7 +360,7 @@
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
-        <segue reference="UhU-RC-JJC"/>
+        <segue reference="BlI-qG-UUN"/>
     </inferredMetricsTieBreakers>
     <resources>
         <image name="paperplane.fill" catalog="system" width="128" height="119"/>
